# path_no_alloc

./: Cargo.toml  LICENSE.txt  README.md
benches/: main.rs
docs/: with_paths.md
docs/benchmarks/exists/10/report/: index.html
docs/benchmarks/exists/100/report/: index.html
docs/benchmarks/exists/110/report/: index.html
docs/benchmarks/exists/20/report/: index.html
docs/benchmarks/exists/30/report/: index.html
docs/benchmarks/exists/40/report/: index.html
docs/benchmarks/exists/50/report/: index.html
docs/benchmarks/exists/60/report/: index.html
docs/benchmarks/exists/70/report/: index.html
docs/benchmarks/exists/80/report/: index.html
docs/benchmarks/exists/90/report/: index.html
docs/benchmarks/exists/Path.join/report/: index.html
docs/benchmarks/exists/report/: index.html
docs/benchmarks/exists/with_paths!/report/: index.html
docs/benchmarks/join/10/report/: index.html
docs/benchmarks/join/100/report/: index.html
docs/benchmarks/join/110/report/: index.html
docs/benchmarks/join/20/report/: index.html
docs/benchmarks/join/30/report/: index.html
docs/benchmarks/join/40/report/: index.html
docs/benchmarks/join/50/report/: index.html
docs/benchmarks/join/60/report/: index.html
docs/benchmarks/join/70/report/: index.html
docs/benchmarks/join/80/report/: index.html
docs/benchmarks/join/90/report/: index.html
docs/benchmarks/join/Path.join/report/: index.html
docs/benchmarks/join/report/: index.html
docs/benchmarks/report/: index.html
examples/: check_exists.rs
src/: lib.rs  tests.rs
(+276 files in other folders)
