[package]
authors = ["Alecto Irene Perez <perez.cs@pm.me>"]
description = "Provides with_paths! macro, for joining paths ergonomically and without allocation."
edition = "2021"
homepage = "https://github.com/codeinred/path_no_alloc"
keywords = ["path", "paths", "filesystem", "fs"]
license = "MIT"
name = "path_no_alloc"
readme = "README.md"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
rand = "0.8.4"

[[bench]]
harness = false
name = "main"
